--- a/.travis.yml
+++ b/.travis.yml
@@ -4,9 +4,6 @@ osx_image: xcode9.2
 xcode_sdk: iphonesimulator11.2
 podfile: ChatPlatformApp/Podfile
 
-before_script:
-  - set -o pipefail
-
 jobs:
   include:
 # ==============================================================================
@@ -14,7 +11,7 @@ jobs:
       if: NOT (tag IS present)
       env: JOB=iOS Tests
       script:
-        - travis_retry xcodebuild -workspace ChatPlatform.xcworkspace -scheme ChatPlatformApp -destination "platform=iOS Simulator,name=iPhone 7 Plus" -enableCodeCoverage YES CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY="" test | xcpretty -f `xcpretty-travis-formatter`
+        - xcodebuild -workspace ChatPlatform.xcworkspace -scheme ChatPlatformApp -destination "platform=iOS Simulator,name=iPhone 7 Plus" -enableCodeCoverage YES CODE_SIGNING_REQUIRED=NO CODE_SIGN_IDENTITY="" test | xcpretty -f `xcpretty-travis-formatter`
       after_success:
         - bash <(curl -s https://codecov.io/bash)
 # ==============================================================================
